// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en en el componente GifExpertApp debe mostar un determinado numero de categorias por defecto 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="One Punch"
    key="One Punch"
  />
  <GifGrid
    category="Dragon ball"
    key="Dragon ball"
  />
</div>
`;

exports[`Pruebas en en el componente GifExpertApp debe mostrarse el componente correctamente el componente 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</div>
`;
